src/test/ui/generator/yield-outside-generator-issue-78653.stderr
error[E0627]: yield expression outside of generator literal
  --> $DIR/yield-outside-generator-issue-78653.rs:4:5
   |
LL |     yield || for i in 0 { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `{integer}` is not an iterator
  --> $DIR/yield-outside-generator-issue-78653.rs:4:23
   |
LL |     yield || for i in 0 { }
   |                       ^ `{integer}` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `{integer}`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`
   = note: required because of the requirements on the impl of `IntoIterator` for `{integer}`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0627.
For more information about an error, try `rustc --explain E0277`.
