src/test/ui/generator/yield-outside-generator-issue-78653.rs
#![feature(generators)]

fn main() {
    yield || for i in 0 { }
    //~^ ERROR yield expression outside of generator literal
    //~| ERROR `{integer}` is not an iterator
}
